--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
       name="description"
       content="Car rental application built with React + Vite"
     />
+
+    <meta name="description" content="Веб-додаток для оренди автомобілів" />
+    <meta property="og:title" content="RentalCar" />
+    <meta property="og:description" content="Оренда авто швидко та зручно" />
+    <meta property="og:image" content="/Hero-pc.webp" />
+
+    <meta property="og:image:type" content="image/webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
