--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
     <meta name="description" content="Веб-додаток для оренди автомобілів" />
     <meta property="og:title" content="RentalCar" />
     <meta property="og:description" content="Оренда авто швидко та зручно" />
-    <meta property="og:image" content="/rent_car.webp" />
+    <meta
+      property="og:image"
+      content="https://next-ride-psi.vercel.app/rent_car.webp"
+    />
 
     <meta property="og:image:type" content="image/webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:type" content="website" />
-    <meta property="twitter:image" content="/rent_car.webp" />
+    <meta
+      property="twitter:image"
+      content="https://next-ride-psi.vercel.app/rent_car.webp"
+    />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="RentalCar" />
+    <meta
+      property="twitter:description"
+      content="Веб-додаток для оренди автомобілів"
+    />
     <meta property="og:site_name" content="RentalCar" />
     <meta property="og:url" content="https://next-ride-psi.vercel.app/" />
     <link
